--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "react-simple-typewriter": "^5.0.1",
+    "react-type-animation": "^3.2.0",
     "tailwind-merge": "^2.5.3",
     "tailwindcss-animate": "^1.0.7"
   },
